(lang dune 3.20)

(name lizalang-backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lizalang-backend)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml liza dream dream_middleware_ext)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
